fix: repair malformed AI calibration dialog markup

--- a/index.html
+++ b/index.html
@@ -3930,14 +3930,13 @@
             >
               Generate
             </button>
-              <button
-                type="button"
-                class="shape-fill-toggle"
-                data-shape-fill-toggle="true"
-              >
-                Fill: Solid
-              </button>
-            </div>
+            <button
+              type="button"
+              onclick="document.getElementById('ai-calibration-dialog').close()"
+              class="px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold rounded-lg transition-colors"
+            >
+              Cancel
+            </button>
           </div>
 
         </form>
