--- a/index.html
+++ b/index.html
@@ -246,12 +246,13 @@
       }
 
       .toolbar-wrap {
-        max-width: 1400px;
-        margin: 0 auto;
-        padding: 0 12px;
+        width: 100%;
+        max-width: none;
+        margin: 0;
+        padding: 0;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
         height: 48px;
       }
 
@@ -265,6 +266,22 @@
         /* Prevent shrinking that causes layout shifts */
         min-width: 0;
         /* Allow flex items to shrink below content size if needed */
+      }
+
+      #tbLeft {
+        flex: 1 1 auto;
+        justify-content: flex-start;
+      }
+
+      #tbCenter {
+        flex: 0 0 auto;
+        justify-content: center;
+      }
+
+      #tbRight {
+        flex: 1 1 auto;
+        justify-content: center;
+        overflow: hidden;
       }
 
       /* Stabilize button widths to prevent jumping */
@@ -320,8 +337,15 @@
         .toolbar-wrap:not(.expanded) #tbLeft,
         .toolbar-wrap:not(.expanded) #tbCenter,
         .toolbar-wrap:not(.expanded) #tbRight {
+          flex: 0 0 auto;
           flex-shrink: 0;
           flex-wrap: nowrap;
+        }
+
+        #tbRight {
+          max-width: none;
+          justify-content: flex-start;
+          overflow: visible;
         }
 
         /* Ensure buttons don't shrink in scrollable mode */
