--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         padding: 0;
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
         height: 48px;
       }
 
@@ -269,7 +269,7 @@
       }
 
       #tbLeft {
-        flex: 1 1 auto;
+        flex: 0 0 auto;
         justify-content: flex-start;
       }
 
@@ -279,9 +279,9 @@
       }
 
       #tbRight {
-        flex: 1 1 auto;
-        justify-content: center;
-        overflow: hidden;
+        flex: 0 0 auto;
+        justify-content: flex-end;
+        overflow: visible;
       }
 
       /* Stabilize button widths to prevent jumping */
