fix: remove empty center toolbar spacer gap

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         padding: 0;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
         height: 48px;
       }
 
@@ -282,6 +282,11 @@
         flex: 0 0 auto;
         justify-content: flex-end;
         overflow: visible;
+        margin-left: auto;
+      }
+
+      #tbCenter {
+        display: none;
       }
 
       /* Stabilize button widths to prevent jumping */
