fix: restore toolbar workflows and stabilize drawing controls

--- a/index.html
+++ b/index.html
@@ -2541,7 +2541,7 @@
             <div class="shape-menu" id="drawingModeMenu">
               <button type="button" data-drawing-mode="line">Straight Line</button>
               <button type="button" data-drawing-mode="curve">Curved Line</button>
-              <button type="button" data-drawing-mode="privacy">Privacy Erase</button>
+              <button type="button" data-drawing-mode="privacy">Eraser Tool</button>
               <button type="button" data-drawing-mode="select">Select</button>
             </div>
           </div>
@@ -3075,7 +3075,7 @@
               <div class="shape-menu" id="drawingModeMenu">
                 <button type="button" data-drawing-mode="line">Straight Line</button>
                 <button type="button" data-drawing-mode="curve">Curved Line</button>
-                <button type="button" data-drawing-mode="privacy">Privacy Erase</button>
+                <button type="button" data-drawing-mode="privacy">Eraser Tool</button>
                 <button type="button" data-drawing-mode="select">Select</button>
               </div>
             </div>
